appv2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxv2-svc
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginxv2
